add new apis
